last comments katharina

--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -214,8 +214,8 @@ When the relative pronoun is the dative, the \tsc{k}P consists of the features \
           [\tsc{rel}]
           [\tsc{wh}P
               [\tsc{wh}]
-              [\tsc{ind}P
-                  [\tsc{ind}]
+              [\#P
+                  [\#]
                   [\tsc{an}]
               ]
           ]
@@ -228,8 +228,8 @@ When the relative pronoun is the dative, the \tsc{k}P consists of the features \
       fit to=tree]{};
       }
           [\tsc{k}]
-          [\tsc{ind}P
-              [\tsc{ind}]
+          [\#P
+              [\#]
               [\tsc{an}P
                   [\tsc{an}]
                   [\tsc{cl}P
@@ -299,7 +299,7 @@ Table \ref{tbl:mg-dieser} shows that the final consonant differs depending on ge
 For number and gender, I adopt the features that are distinguished by \citet{harley2002} for pronouns in a crosslinguistic study with over 100 languages. The feature \tsc{cl} corresponds to a gender feature, which is inanimate or neuter if it is not combined with any other features. Combining \tsc{cl} with the feature \tsc{an} gives the animate or masculine gender.\footnote{
 If the features \tsc{cl} and \tsc{an} are combined with the feature \tsc{fem}, it becomes the feminine gender.
 }
-The feature \tsc{ind} corresponds to number, which is singular if it is not combined with any other features.
+The feature \ac{\#} corresponds to number, which is singular if it is not combined with any other features.
 
 For case, I adopt the features of \citet{caha2009}, already introduced in Chapter \ref{ch:decomposition}. The feature \tsc{k}1 and \tsc{k}2 corresponds to the accusative, and the features \tsc{k}1, \tsc{k}2 and \tsc{k}3 correspond to the dative.
 
@@ -321,7 +321,7 @@ To be more precise, the final consonants correspond to the weak pronoun in Moder
 }
 
 I give the lexical entries for \tit{n} and \tit{m} in \ref{ex:mg-entries-nm}.
-The \tit{n} is the accusative animate singular, so it spells out the features \tsc{ref}, \tsc{cl}, \tsc{an}, \tsc{ind}, \tsc{k}1 and \tsc{k}2. The \tit{m} is the dative animate singular, so it spells out the features that the \tit{n} spells out plus \tsc{k}3.
+The \tit{n} is the accusative animate singular, so it spells out the features \tsc{ref}, \tsc{cl}, \tsc{an}, \#, \tsc{k}1 and \tsc{k}2. The \tit{m} is the dative animate singular, so it spells out the features that the \tit{n} spells out plus \tsc{k}3.
 
 \ex.\label{ex:mg-entries-nm}
 \a.\label{ex:mg-entry-n}
@@ -330,8 +330,8 @@ The \tit{n} is the accusative animate singular, so it spells out the features \t
       [\tsc{k}2]
       [\tsc{nom}P
           [\tsc{k}1]
-          [\tsc{ind}P
-              [\tsc{ind}]
+          [\#P
+              [\#]
               [\tsc{an}P
                   [\tsc{an}]
                   [\tsc{cl}P
@@ -352,8 +352,8 @@ The \tit{n} is the accusative animate singular, so it spells out the features \t
           [\tsc{k}2]
           [\tsc{nom}P
               [\tsc{k}1]
-              [\tsc{ind}P
-                  [\tsc{ind}]
+              [\#P
+                  [\#]
                   [\tsc{an}P
                       [\tsc{an}]
                       [\tsc{cl}P
@@ -421,11 +421,11 @@ I start with discussing the operator features \tsc{wh} and \tsc{rel}.
 The feature \tsc{rel} is present to establish a relation.
 I assume that a relation is established with the light head. The semantics of the headless relative a whole is then an individual that has been picked from a set of alternatives \citep[cf.]{caponigro2003}.
 
-I continue with the last two features that are spelled out by \tit{we}, namely the number feature \tsc{ind} and the gender feature \tsc{an}. Consider again Table \ref{tbl:mg-paradigm-wh-rels-rep}. In the different genders, not only the final consonants differ, but also the vowel. This suggests that \tit{we} also realizes gender features.\footnote{
+I continue with the last two features that are spelled out by \tit{we}, namely the number feature \# and the gender feature \tsc{an}. Consider again Table \ref{tbl:mg-paradigm-wh-rels-rep}. In the different genders, not only the final consonants differ, but also the vowel. This suggests that \tit{we} also realizes gender features.\footnote{
 In Section \ref{sec:mg-w-er-cv} I discuss an alternative segmentation of \tit{wer}.
 }
 
-I end with discussing the number feature \tsc{ind}. I derive its presence from the fact that \tsc{wh}-pronouns in Modern German can only show singular verbal agreement and no plural agreement. Consider the examples in \ref{ex:mg-wh}.
+I end with discussing the number feature \#. I derive its presence from the fact that \tsc{wh}-pronouns in Modern German can only show singular verbal agreement and no plural agreement. Consider the examples in \ref{ex:mg-wh}.
 
 \ex.\label{ex:mg-wh}
 \ag. Wer mach-t das?\\
@@ -437,15 +437,15 @@ intended: `Who are doing that?'\label{ex:mg-wh-pl}
 
 In \ref{ex:mg-wh-sg}, the verb \tit{macht} appears in third person singular. It agrees with the \tsc{wh}-pronoun \tit{wer} `who'. This question can be interpreted as referring to a single referent or multiple, as indicated by the translation. The sentence in \ref{ex:mg-wh-pl}, in which the verb \tit{machen} has third person plural agreement, is ungrammatical.
 
-In sum, the morpheme \tit{we} corresponds to the features \tsc{wh}, \tsc{rel}, \tsc{ind} and \tsc{an} as shown in \ref{ex:mg-entry-we}.
+In sum, the morpheme \tit{we} corresponds to the features \tsc{wh}, \tsc{rel}, \# and \tsc{an} as shown in \ref{ex:mg-entry-we}.
 
 \ex. \begin{forest} boom
   [\tsc{rel}P
       [\tsc{rel}]
       [\tsc{wh}P
           [\tsc{wh}]
-          [\tsc{ind}P
-              [\tsc{ind}]
+          [\#P
+              [\#]
               [\tsc{an}]
           ]
       ]
@@ -469,8 +469,8 @@ At this point, I gave lexical entries for each of the morphemes that the relativ
           [\tsc{rel}]
           [\tsc{wh}P
               [\tsc{wh}]
-              [\tsc{ind}P
-                  [\tsc{ind}]
+              [\#P
+                  [\#]
                   [\tsc{an}]
               ]
           ]
@@ -483,8 +483,8 @@ At this point, I gave lexical entries for each of the morphemes that the relativ
       fit to=tree]{};
       }
           [\tsc{k}]
-          [\tsc{ind}P
-              [\tsc{ind}]
+          [\#P
+              [\#]
               [\tsc{an}P
                   [\tsc{an}]
                   [\tsc{cl}P
@@ -611,8 +611,8 @@ The way Nanosyntax combines different morphemes is not by glueing them together 
            [\tsc{rel}]
            [\tsc{wh}P
                [\tsc{wh}]
-               [\tsc{ind}P
-                   [\tsc{ind}]
+               [\#P
+                   [\#]
                    [\tsc{an}P
                        [\tsc{an}]
                        [\tsc{cl}P
@@ -627,10 +627,10 @@ The way Nanosyntax combines different morphemes is not by glueing them together 
 \end{forest}
 \end{adjustbox}
 
-Starting from the bottom, these are pronominal feature \tsc{ref}, gender features \tsc{cl} and \tsc{an}, a number feature \tsc{ind}, operator features \tsc{wh} and \tsc{rel} and case features \tsc{k}.
+Starting from the bottom, these are pronominal feature \tsc{ref}, gender features \tsc{cl} and \tsc{an}, a number feature \#, operator features \tsc{wh} and \tsc{rel} and case features \tsc{k}.
 
 This order is motivated as follows. Pronominal features (\tsc{ref}) are the nominal part of the structure and therefore the bottom-most feature.
-Both \citet{picallo2008} and \citet{kramer2016} argue that number (\tsc{ind}) is hierarchically higher than gender (\tsc{cl} and \tsc{an}). Case (\tsc{k}) is agreed to be higher than number (\tsc{ind}) \citep[cf.][]{bittner1996}.
+Both \citet{picallo2008} and \citet{kramer2016} argue that number (\#) is hierarchically higher than gender (\tsc{cl} and \tsc{an}). Case (\tsc{k}) is agreed to be higher than number (\#) \citep[cf.][]{bittner1996}.
 
 For the position of the operator features (\tsc{wh} and \tsc{rel}) consider \ref{ex:position-operator}.
 
@@ -674,8 +674,8 @@ With this background in place, I start constructing the accusative relative pron
       [\tsc{k}2]
       [\tsc{nom}P
           [\tsc{k}1]
-          [\tsc{ind}P
-              [\tsc{ind}]
+          [\#P
+              [\#]
               [\tsc{an}P
                   [\tsc{an}]
                   [\tsc{cl}P
@@ -696,8 +696,8 @@ With this background in place, I start constructing the accusative relative pron
           [\tsc{k}2]
           [\tsc{nom}P
               [\tsc{k}1]
-              [\tsc{ind}P
-                  [\tsc{ind}]
+              [\#P
+                  [\#]
                   [\tsc{an}P
                       [\tsc{an}]
                       [\tsc{cl}P
@@ -717,8 +717,8 @@ With this background in place, I start constructing the accusative relative pron
       [\tsc{rel}]
       [\tsc{wh}P
           [\tsc{wh}]
-          [\tsc{ind}P
-              [\tsc{ind}]
+          [\#P
+              [\#]
               [\tsc{an}]
           ]
       ]
@@ -777,20 +777,20 @@ Therefore, the \tsc{an}P is spelled out as \tit{n}, shown in \ref{ex:mg-spellout
   ]
 \end{forest}
 
-The next feature is the feature \tsc{ind}, and a \tsc{ind}P is created.
+The next feature is the feature \#, and a \#P is created.
 The syntactic structure forms a constituent in the lexical tree in \ref{ex:mg-entry-n-rep}.
-Therefore, the \tsc{ind}P is spelled out as \tit{n}, shown in \ref{ex:mg-spellout-n-ind}.
+Therefore, the \#P is spelled out as \tit{n}, shown in \ref{ex:mg-spellout-n-ind}.
 
 \ex.\label{ex:mg-spellout-n-ind}
 \begin{forest} boom
-  [\tsc{ind}P,
+  [\#P,
   tikz={
   \node[label=below:\tit{n},
   draw,circle,
   scale=0.9,
   fit to=tree]{};
   }
-      [\tsc{ind}]
+      [\#]
       [\tsc{an}P
           [\tsc{an}]
           [\tsc{cl}P
@@ -808,8 +808,8 @@ The feature \tsc{wh} is merged, and a \tsc{wh}P is created, as shown in \ref{ex:
 \begin{forest} boom
   [\tsc{wh}P
       [\tsc{wh}]
-      [\tsc{ind}P
-          [\tsc{ind}]
+      [\#P
+          [\#]
           [\tsc{an}P
               [\tsc{an}]
               [\tsc{cl}P
@@ -825,7 +825,7 @@ This syntactic structure does not form a constituent in the lexical tree in \ref
 There is also no other lexical tree that contains the structure in \ref{ex:mg-spellout-wh-phrasal} as a constituent. Therefore, there is no successful spellout for the syntactic structure in the derivational step in which the structure is spelled out as a single phrase (\ref{ex:spellout-algorithm-phrasal} in the Spellout Algorithm).
 
 The first movement option in the Spellout Algorithm is moving the specifier, as described in \ref{ex:spellout-algorithm-spec}. As there is no specifier in this structure, the first movement option is irrelevant.
-The second movement option in the Spellout Algorithm is moving the complement, as described in \ref{ex:spellout-algorithm-comp}. In this case, the complement of \tsc{wh}, the \tsc{ind}P, is moved to the specifier of \tsc{wh}P. As this movement option does not lead to a successful match, I do not show it here. I come back to it in Chapter \ref{ch:deriving-matching}, in which it does lead to a successful match.
+The second movement option in the Spellout Algorithm is moving the complement, as described in \ref{ex:spellout-algorithm-comp}. In this case, the complement of \tsc{wh}, the \#P, is moved to the specifier of \tsc{wh}P. As this movement option does not lead to a successful match, I do not show it here. I come back to it in Chapter \ref{ch:deriving-matching}, in which it does lead to a successful match.
 
 As I mentioned earlier, there are two more derivational options possible: Backtracking and Spec Formation. Derivationally, Backtracking comes first. However, since this does not lead to a successful spellout here I first introduce Spec Formation and I return to Backtracking later. Spec Formation is a last resort operation, when the feature cannot be spelled out by any of the preceding options. It is formalized as in \ref{ex:merge-spec}.
 
@@ -843,25 +843,25 @@ In this dissertation, I work with the proposal in \citet{starke2018}, in which t
 }
 This can be a single feature or multiples ones. I illustrate this with the Modern German relative pronouns.
 
-For the feature \tsc{wh} it means that it is merged with the feature \tsc{ind}. Then, the lexicon is checked for a lexical tree that contains the phrase \tsc{wh}P that contains \tsc{wh} and \tsc{ind}, as shown in \ref{ex:mg-spellout-wh-ind}.
+For the feature \tsc{wh} it means that it is merged with the feature \#. Then, the lexicon is checked for a lexical tree that contains the phrase \tsc{wh}P that contains \tsc{wh} and \#, as shown in \ref{ex:mg-spellout-wh-ind}.
 
 \ex.\label{ex:mg-spellout-wh-ind}
 \begin{forest} boom
   [\tsc{wh}P
       [\tsc{wh}]
-      [\tsc{ind}]
+      [\#]
   ]
 \end{forest}
 
 This syntactic structure does not form a constituent in any of the lexical trees in the language's lexicon.
-Therefore, the feature \tsc{wh} combines not only with the feature merged before it, but with a phrase that consists of the two features merged before it: \tsc{ind} and \tsc{an}. I give the phrase this gives in \ref{ex:mg-structure-wh-ind-an}.
+Therefore, the feature \tsc{wh} combines not only with the feature merged before it, but with a phrase that consists of the two features merged before it: \# and \tsc{an}. I give the phrase this gives in \ref{ex:mg-structure-wh-ind-an}.
 
 \ex.\label{ex:mg-structure-wh-ind-an}
 \begin{forest} boom
   [\tsc{wh}P
       [\tsc{wh}]
-      [\tsc{ind}P
-          [\tsc{ind}]
+      [\#P
+          [\#]
           [\tsc{an}]
       ]
   ]
@@ -879,8 +879,8 @@ This syntactic structure forms a constituent in the lexical tree in \ref{ex:mg-e
    fit to=tree]{};
    }
       [\tsc{wh}]
-      [\tsc{ind}P
-          [\tsc{ind}]
+      [\#P
+          [\#]
           [\tsc{an}]
       ]
   ]
@@ -900,19 +900,19 @@ The newly created phrase is merged as a whole with the already existing structur
        fit to=tree]{};
        }
           [\tsc{wh}]
-          [\tsc{ind}P
-              [\tsc{ind}]
+          [\#P
+              [\#]
               [\tsc{an}]
           ]
       ]
-      [\tsc{ind}P,
+      [\#P,
       tikz={
       \node[label=below:\tit{n},
       draw,circle,
       scale=0.95,
       fit to=tree]{};
       }
-          [\tsc{ind}]
+          [\#]
           [\tsc{an}P
               [\tsc{an}]
               [\tsc{cl}P
@@ -943,19 +943,19 @@ The next feature in the functional sequence is the feature \tsc{rel}. As always,
            fit to=tree]{};
            }
               [\tsc{wh}]
-              [\tsc{ind}P
-                  [\tsc{ind}]
+              [\#P
+                  [\#]
                   [\tsc{an}]
               ]
           ]
-          [\tsc{ind}P,
+          [\#P,
           tikz={
           \node[label=below:\tit{n},
           draw,circle,
           scale=0.95,
           fit to=tree]{};
           }
-              [\tsc{ind}]
+              [\#]
               [\tsc{an}P
                   [\tsc{an}]
                   [\tsc{cl}P
@@ -994,8 +994,8 @@ For the example under discussion, the situation looks as in \ref{ex:mg-rel-2x}.
       [\tsc{rel}]
       [\tsc{wh}P
           [\tsc{wh}]
-          [\tsc{ind}P
-              [\tsc{ind}]
+          [\#P
+              [\#]
               [\tsc{an}]
           ]
       ]
@@ -1005,8 +1005,8 @@ For the example under discussion, the situation looks as in \ref{ex:mg-rel-2x}.
 \begin{forest} boom
   [\tsc{rel}P
       [\tsc{rel}]
-      [\tsc{ind}P
-          [\tsc{ind}]
+      [\#P
+          [\#]
           [\tsc{an}P
               [\tsc{an}]
               [\tsc{cl}P
@@ -1018,7 +1018,7 @@ For the example under discussion, the situation looks as in \ref{ex:mg-rel-2x}.
   ]
 \end{forest}
 
-The feature \tsc{rel} is merged in both workspaces, so it combines with the \tsc{wh}P in \ref{ex:mg-whp-rel} and with the \tsc{ind}P in \ref{ex:mg-indp-rel}. From here on, the derivation proceeds, as usual, according to the Spellout Algorithm, with the only difference that it happens in two workspaces simultaneously. Spellout has to be successful in at least one of the two workspaces.
+The feature \tsc{rel} is merged in both workspaces, so it combines with the \tsc{wh}P in \ref{ex:mg-whp-rel} and with the \#P in \ref{ex:mg-indp-rel}. From here on, the derivation proceeds, as usual, according to the Spellout Algorithm, with the only difference that it happens in two workspaces simultaneously. Spellout has to be successful in at least one of the two workspaces.
 
 In the case of \ref{ex:mg-rel-2x}, the spellout of \tsc{rel} is successful in the syntactic structure in \ref{ex:mg-whp-rel}.
 This syntactic structure forms a constituent in the lexical tree in \ref{ex:mg-entry-we-rep}, which corresponds to the \tit{we}.
@@ -1039,20 +1039,20 @@ As spellout has succeeded at least once, the workspaces can be merged back toget
           [\tsc{rel}]
           [\tsc{wh}P
               [\tsc{wh}]
-              [\tsc{ind}P
-                  [\tsc{ind}]
+              [\#P
+                  [\#]
                   [\tsc{an}]
               ]
           ]
       ]
-      [\tsc{ind}P,
+      [\#P,
       tikz={
       \node[label=below:\tit{n},
       draw,circle,
       scale=0.95,
       fit to=tree]{};
       }
-          [\tsc{ind}]
+          [\#]
           [\tsc{an}P
               [\tsc{an}]
               [\tsc{cl}P
@@ -1065,12 +1065,12 @@ As spellout has succeeded at least once, the workspaces can be merged back toget
 \end{forest}
 \end{adjustbox}
 
-The next feature in the functional sequence is \tsc{k}1. This feature should somehow end up merging with \tsc{ind}P, because it forms a constituent in the lexical tree in \ref{ex:mg-entry-n-rep}, which corresponds to \tit{n}. This can again be achieved via Backtracking in which phrases are split up. I go through the derivation step by step.
+The next feature in the functional sequence is \tsc{k}1. This feature should somehow end up merging with \#P, because it forms a constituent in the lexical tree in \ref{ex:mg-entry-n-rep}, which corresponds to \tit{n}. This can again be achieved via Backtracking in which phrases are split up. I go through the derivation step by step.
 
 The feature \tsc{k}1 is merged with the existing syntactic structure, creating a \tsc{nom}P.
 This structure does not form a constituent in any of the lexical trees in the language's lexicon, and neither of the spellout driven movements leads to a successful spellout.
-Backtracking leads to splitting up the \tsc{rel}P from the \tsc{ind}P.
-The feature \tsc{k}1 is merged in both workspaces, so with the \tsc{rel}P and with the \tsc{ind}P. The spellout of \tsc{k}1 is successful when it is combined with the \tsc{ind}P.
+Backtracking leads to splitting up the \tsc{rel}P from the \#P.
+The feature \tsc{k}1 is merged in both workspaces, so with the \tsc{rel}P and with the \#P. The spellout of \tsc{k}1 is successful when it is combined with the \#P.
 It forms a constituent in the lexical tree in \ref{ex:mg-entry-n-rep}, which corresponds to the \tit{n}.
 The \tsc{nom}P is spelled out as \tit{n}, and all constituents are merged back into the existing syntactic structure, as shown in \ref{ex:mg-spellout-rel-nom}.
 
@@ -1088,8 +1088,8 @@ The \tsc{nom}P is spelled out as \tit{n}, and all constituents are merged back i
               [\tsc{rel}]
               [\tsc{wh}P
                   [\tsc{wh}]
-                  [\tsc{ind}P
-                      [\tsc{ind}]
+                  [\#P
+                      [\#]
                       [\tsc{an}]
                   ]
               ]
@@ -1102,8 +1102,8 @@ The \tsc{nom}P is spelled out as \tit{n}, and all constituents are merged back i
           fit to=tree]{};
           }
               [\tsc{k}1]
-              [\tsc{ind}P
-                  [\tsc{ind}]
+              [\#P
+                  [\#]
                   [\tsc{an}P
                       [\tsc{an}]
                       [\tsc{cl}P
@@ -1138,8 +1138,8 @@ It forms a constituent in the lexical tree in \ref{ex:mg-entry-n-rep}, which cor
               [\tsc{rel}]
               [\tsc{wh}P
                   [\tsc{wh}]
-                  [\tsc{ind}P
-                      [\tsc{ind}]
+                  [\#P
+                      [\#]
                       [\tsc{an}]
                   ]
               ]
@@ -1154,8 +1154,8 @@ It forms a constituent in the lexical tree in \ref{ex:mg-entry-n-rep}, which cor
               [\tsc{k}2]
               [\tsc{nom}P
                   [\tsc{k}1]
-                  [\tsc{ind}P
-                      [\tsc{ind}]
+                  [\#P
+                      [\#]
                       [\tsc{an}P
                           [\tsc{an}]
                           [\tsc{cl}P
@@ -1192,8 +1192,8 @@ The \tsc{dat}P is spelled out as \tit{m}, and all constituents are merged back i
               [\tsc{rel}]
               [\tsc{wh}P
                   [\tsc{wh}]
-                  [\tsc{ind}P
-                      [\tsc{ind}]
+                  [\#P
+                      [\#]
                       [\tsc{an}]
                   ]
               ]
@@ -1210,8 +1210,8 @@ The \tsc{dat}P is spelled out as \tit{m}, and all constituents are merged back i
                   [\tsc{k}2]
                   [\tsc{nom}P
                       [\tsc{k}1]
-                      [\tsc{ind}P
-                          [\tsc{ind}]
+                      [\#P
+                          [\#]
                           [\tsc{an}P
                               [\tsc{an}]
                               [\tsc{cl}P
@@ -1269,8 +1269,8 @@ I end up claiming that the phi and case feature portmanteau of the relative pron
     fit to=tree]{};
     }
         [\tsc{k}]
-        [\tsc{ind}P
-            [\tsc{ind}]
+        [\#P
+            [\#]
             [\tsc{an}P
                 [\tsc{an}]
                 [\tsc{cl}P
@@ -1427,8 +1427,8 @@ In Chapter \ref{ch:the-basic-idea}, I suggested that the relative pronoun contai
 \begin{forest} boom
   [\tsc{k}P
       [\tsc{k}]
-      [\tsc{ind}P
-          [\tsc{ind}]
+      [\#P
+          [\#]
           [\tsc{an}P
               [\tsc{an}]
               [\tsc{cl}P
@@ -1440,7 +1440,7 @@ In Chapter \ref{ch:the-basic-idea}, I suggested that the relative pronoun contai
   ]
 \end{forest}
 
-It contains the pronominal feature \tsc{ref}, the gender features \tsc{cl} and \tsc{an}, the number feature \tsc{ind} and case features \tsc{k}.
+It contains the pronominal feature \tsc{ref}, the gender features \tsc{cl} and \tsc{an}, the number feature \# and case features \tsc{k}.
 
 I introduced the lexical entries that are required to spell out these features in Section \ref{sec:mg-rel}. I repeat them in \ref{ex:mg-entries-all-lh}.
 
@@ -1451,8 +1451,8 @@ I introduced the lexical entries that are required to spell out these features i
        [\tsc{k}2]
        [\tsc{nom}P
            [\tsc{k}1]
-           [\tsc{ind}P
-               [\tsc{ind}]
+           [\#P
+               [\#]
                [\tsc{an}P
                    [\tsc{an}]
                    [\tsc{cl}P
@@ -1473,8 +1473,8 @@ I introduced the lexical entries that are required to spell out these features i
            [\tsc{k}2]
            [\tsc{nom}P
                [\tsc{k}1]
-               [\tsc{ind}P
-                   [\tsc{ind}]
+               [\#P
+                   [\#]
                    [\tsc{an}P
                        [\tsc{an}]
                        [\tsc{cl}P
@@ -1494,7 +1494,7 @@ The derivations of the extra light heads are straight-forward ones. The features
 First, the features \tsc{ref} and \tsc{cl} are merged, and the \tsc{cl}P is created.
 The syntactic structure forms a constituent in the lexical tree in \ref{ex:mg-entry-n-rep1}.
 Therefore, the \tsc{cl}P is spelled out as \tit{n}.
-Exactly the same happens for the features \tsc{an}, \tsc{ind} and \tsc{k}1.
+Exactly the same happens for the features \tsc{an}, \# and \tsc{k}1.
 They are merged, they form a constituent in the lexical tree in \ref{ex:mg-entry-n-rep1}, and they are spelled out as \tit{n}.
 
 The last feature that is merged for the accusative extra light head is the \tsc{k}2.
@@ -1513,8 +1513,8 @@ Therefore, the \tsc{acc}P is spelled out as \tit{n}, as shown in \ref{ex:mg-elh-
         [\tsc{k}2]
         [\tsc{nom}P
             [\tsc{k}1]
-            [\tsc{ind}P
-                [\tsc{ind}]
+            [\#P
+                [\#]
                 [\tsc{an}P
                     [\tsc{an}]
                     [\tsc{cl}P
@@ -1547,8 +1547,8 @@ fit to=tree]{};
         [\tsc{k}2]
         [\tsc{nom}P
             [\tsc{k}1]
-            [\tsc{ind}P
-                [\tsc{ind}]
+            [\#P
+                [\#]
                 [\tsc{an}P
                     [\tsc{an}]
                     [\tsc{cl}P
@@ -1613,7 +1613,7 @@ In Figure \ref{fig:mg-int=ext}, I give the syntactic structure of the extra ligh
             [\tsc{k}2]
             [\tsc{nom}P
                 [\tsc{k}1]
-                [\tsc{ind}P
+                [\#P
                     [\phantom{xxx}, roof]
                 ]
             ]
@@ -1643,7 +1643,7 @@ In Figure \ref{fig:mg-int=ext}, I give the syntactic structure of the extra ligh
                   [\tsc{k}2]
                   [\tsc{nom}P
                       [\tsc{k}1]
-                      [\tsc{ind}P
+                      [\#P
                           [\phantom{xxx}, roof]
                       ]
                   ]
@@ -1704,7 +1704,7 @@ In Figure \ref{fig:mg-int-wins}, I give the syntactic structure of the extra lig
             [\tsc{k}2]
             [\tsc{nom}P
                 [\tsc{k}1]
-                [\tsc{ind}P
+                [\#P
                     [\phantom{xxx}, roof]
                 ]
             ]
@@ -1738,7 +1738,7 @@ In Figure \ref{fig:mg-int-wins}, I give the syntactic structure of the extra lig
                         [\tsc{k}2]
                         [\tsc{nom}P
                             [\tsc{k}1]
-                            [\tsc{ind}P
+                            [\#P
                                 [\phantom{xxx}, roof]
                             ]
                         ]
@@ -1809,7 +1809,7 @@ In Figure \ref{fig:mg-ext-wins}, I give the syntactic structure of the extra lig
                 [\tsc{k}2]
                 [\tsc{nom}P
                     [\tsc{k}1]
-                    [\tsc{ind}P
+                    [\#P
                         [\phantom{xxx}, roof]
                     ]
                 ]
@@ -1840,7 +1840,7 @@ In Figure \ref{fig:mg-ext-wins}, I give the syntactic structure of the extra lig
                     [\tsc{k}2]
                     [\tsc{nom}P
                         [\tsc{k}1]
-                        [\tsc{ind}P
+                        [\#P
                             [\phantom{xxx}, roof]
                         ]
                     ]
