--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -12,12 +12,6 @@
   tag = abbr
 }
 
-\DeclareAcronym{rlh}{
-  short = \tsc{rlh} ,
-  long  = regular light head ,
-  tag = abbr
-}
-
 \DeclareAcronym{lh}{
   short = \tsc{lh} ,
   long  = light head ,
@@ -122,7 +116,7 @@
 
 \DeclareAcronym{k}{
   short = \tsc{k} ,
-  long  = case feature ,
+  long  = case ,
   tag = abbr
 }
 
@@ -345,6 +339,18 @@
 \DeclareAcronym{pred}{
   short = \tsc{pred} ,
   long  = predicative ,
+  tag = abbr
+}
+
+\DeclareAcronym{\#}{
+  short = \# ,
+  long  = number ,
+  tag = abbr
+}
+
+\DeclareAcronym{P}{
+  short = P ,
+  long  = phrase ,
   tag = abbr
 }
 
