--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 \documentclass[hidelinks,a4paper,oneside]{memoir}
 
-% \includeonly{deriving-internalonly}
+% \includeonly{deriving-unrestricted}
 %
 % \setulmarginsandblock{3.3cm}{4cm}{*}
 % \setlrmarginsandblock{3cm}{3cm}{*}
@@ -20,7 +20,7 @@
 \center
 \Large
 
-\phantom{x}
+\phantom{xx}
 
 \vspace{6em}
 
